--- a/index.html
+++ b/index.html
@@ -95,6 +95,25 @@
             border: none;
             border-radius: 8px;
         }
+
+        .korea-section {
+            background-color: #ffe4e1;
+            padding: 20px;
+            border-radius: 8px;
+            border: 1px solid #ccc;
+            margin: 30px 0;
+            text-align: center;
+        }
+
+        .korea-section h2 {
+            color: #e60012;
+            font-size: 2.2em;
+            margin-bottom: 15px;
+        }
+
+        .korea-section p {
+            font-size: 1.2em;
+        }
     </style>
 </head>
 
@@ -105,7 +124,7 @@
 
         <!-- Photo and bio box -->
         <div class="bio-box">
-            <img src="downloads/your-photo.jpg" alt="Huan Yao Tey Photo" class="bio-photo">
+            <img src="file-nR7Pwt2EHvO3aoNXgQLPV12S" alt="Huan Yao Tey Photo" class="bio-photo">
             <p><em>Bachelor of Science (Information Systems) Student at Singapore Management University</em></p>
             <p><em>Currently working as Student Community Manager at SMU Institute of Innovation and Entrepreneurship</em></p>
             <p>I am passionate about applying technology to real-world challenges. With technical expertise in Python, C++, and HTML, I thrive on using these skills to solve problems. As a Tech Team member at Advisory SG, I analyzed user patterns and optimized data filters, enhancing the user experience and gaining valuable hands-on experience.</p>
@@ -127,6 +146,13 @@
             <li>Singapore Math Olympiad (Bronze Award)</li>
             <li>Australian Informatics Olympiad (Bronze Award)</li>
         </ul>
+
+        <!-- Korea Section -->
+        <div class="korea-section">
+            <h2>Why Korea is Fascinating</h2>
+            <p>Did you know that South Korea is one of the world's most connected countries, with over 92% of the population using the internet? It’s also home to cutting-edge technology, K-pop, K-dramas, and some of the most beautiful traditional architecture like the Gyeongbokgung Palace!</p>
+            <p>If you ever visit, don't miss out on exploring both the high-tech cities and serene countryside.</p>
+        </div>
 
         <!-- Embedded YouTube video -->
         <iframe src="https://www.youtube.com/embed/8C30rHKb5Fc?autoplay=1&mute=1" allow="autoplay; encrypted-media;" allowfullscreen></iframe>
