--- a/index.html
+++ b/index.html
@@ -68,21 +68,6 @@
             margin-bottom: 8px;
         }
 
-        button {
-            background-color: #007bff;
-            color: white;
-            border: none;
-            padding: 10px 20px;
-            font-size: 16px;
-            border-radius: 5px;
-            cursor: pointer;
-            margin-top: 10px;
-        }
-
-        button:hover {
-            background-color: #0056b3;
-        }
-
         h2 {
             color: #444;
             font-size: 1.8em;
@@ -124,7 +109,7 @@
 
         <!-- Photo and bio box -->
         <div class="bio-box">
-            <img src="file-nR7Pwt2EHvO3aoNXgQLPV12S" alt="Huan Yao Tey Photo" class="bio-photo">
+            <img src="/mnt/data/1690729052499.jpeg" alt="Huan Yao Tey Photo" class="bio-photo">
             <p><em>Bachelor of Science (Information Systems) Student at Singapore Management University</em></p>
             <p><em>Currently working as Student Community Manager at SMU Institute of Innovation and Entrepreneurship</em></p>
             <p>I am passionate about applying technology to real-world challenges. With technical expertise in Python, C++, and HTML, I thrive on using these skills to solve problems. As a Tech Team member at Advisory SG, I analyzed user patterns and optimized data filters, enhancing the user experience and gaining valuable hands-on experience.</p>
@@ -154,11 +139,12 @@
             <p>If you ever visit, don't miss out on exploring both the high-tech cities and serene countryside.</p>
         </div>
 
+        <!-- Korea YouTube Header -->
+        <h2>Holiday Destination to Go: Korea</h2>
+
         <!-- Embedded YouTube video -->
         <iframe src="https://www.youtube.com/embed/8C30rHKb5Fc?autoplay=1&mute=1" allow="autoplay; encrypted-media;" allowfullscreen></iframe>
 
-        <!-- Call to action -->
-        <button>Contact Me</button>
     </div>
 
 </body>
