--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
         <!-- Photo and bio box -->
         <div class="bio-box">
-            <img src="/mnt/data/1690729052499.jpeg" alt="Huan Yao Tey Photo" class="bio-photo">
+            <img src="images/1690729052499.jpeg" alt="Huan Yao Tey Photo" class="bio-photo">
             <p><em>Bachelor of Science (Information Systems) Student at Singapore Management University</em></p>
             <p><em>Currently working as Student Community Manager at SMU Institute of Innovation and Entrepreneurship</em></p>
             <p>I am passionate about applying technology to real-world challenges. With technical expertise in Python, C++, and HTML, I thrive on using these skills to solve problems. As a Tech Team member at Advisory SG, I analyzed user patterns and optimized data filters, enhancing the user experience and gaining valuable hands-on experience.</p>
